# practica-1-inteligencia-artificial-software-abierto

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  codemeta.json  mkdocs.yml  notas_todo.txt  pyproject.toml  requirements.txt
.github/workflows/: test_rfc.yml  use-rsfc.yml
docker/: docker-compose.yml
docker/python_docker/: Dockerfile  pyproject.toml
docker/python_docker/python-scripts/: main.py
docker/python_docker/python-scripts/src/: api_client.py  contador_figures.py  extract_links.py  processor.py  run_cloud.py
docs/: index.md  instalacion.md
python-scripts/: main.py
python-scripts/src/: api_client.py  generate_document.py  visualizer.py
