[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "practica_1_ia"
version = "1.0.0"
description = "Herramienta de procesamiento de PDFs científicos usando GROBID y análisis de texto"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Alejandro Fisac Delgado" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "matplotlib>=3.9.0",
    "wordcloud>=1.9.3",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/alejandro-f-d/practica-1-inteligencia-artificial-software-abierto"
"Bug Tracker" = "https://github.com/alejandro-f-d/practica-1-inteligencia-artificial-software-abierto/issues"

[project.scripts]
procesar-ia = "main:main"

[tool.setuptools]
package-dir = {"" = "python-scripts"}

[tool.setuptools.packages.find]
where = ["python-scripts"]
