[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "practica_1_ia"
version = "1.0.0"
description = "Herramienta de procesamiento de PDFs científicos usando GROBID y análisis de texto"
authors = [
    { name = "Alejandro F. D." }
]
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "matplotlib>=3.9.0",
    "wordcloud>=1.9.3",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]
requires-python = ">=3.10"

[project.scripts]
procesar-ia = "main:main"

[tool.setuptools]
package-dir = {"" = "python-scripts"}

[tool.setuptools.packages.find]
where = ["python-scripts"]
